removed the overflow-x. fixed seo in canonical links

--- a/src/pages/portfolio/projectDetails/ProjectDetails.scss
+++ b/src/pages/portfolio/projectDetails/ProjectDetails.scss
@@ -16,7 +16,7 @@ $font-family_1: "Posterama", sans-serif;
 	height: fit-content;
 	transition: all 1s cubic-bezier(0.16, 1, 0.3, 1);
 	position: relative;
-	overflow-y: hidden;
+	overflow-x: hidden;
 	padding-bottom: 6rem;
 }
 
